--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,6 @@
 $primary-color: #3c3c3c;
 $text-color: #fff;
+$accent-color: rgb(176, 250, 123);
 $font-weights: (
   'regular': 400,
   'medium': 500,
